Hide MessageCenter asynchronously after the last notification is gone

We should not change the visibility of the message center during the notifications are being iterated. This patch makes the code of changing visibility executed asynchronously.

Bug: 782384
Change-Id: I36233312fdd5b3690b9c2e40597e51d8f16128e7